--- a/intro.Rmd
+++ b/intro.Rmd
@@ -10,7 +10,7 @@ editor_options:
 
 Data visualization has a rich and intricate history, and a comprehensive treatment is beyond the scope of the present thesis. Nevertheless, in this section, I will provide a brief overview, with a particular focus on the later developments related to interactive visualization. For a more detailed historical account, readers should refer to @beniger1978, @dix1998, @friendly2006, @friendly2021, or @young2011.
 
-### Static data visualization
+### Static data visualization: From ancient times to the space age
 
 The idea of graphically representing abstract information is very old. As one concrete example, a clay tablet recording a land survey during the Old Babylonian period (approximately 1900-1600 BCE) has recently been identified as the earliest visual depiction of the Pythagorean theorem [@mansfield2020]. Other early examples of abstract visualizations included maps of geographic regions and the night sky, and these were also the first to introduce the idea of coordinate systems [@beniger1978; @friendly2021].
 
@@ -26,7 +26,7 @@ Descartes' invention was initially only used to plot abstract mathematical relat
 
 Simultaneously, the field of mathematical statistics was also experiencing significant developments. Building upon the foundation laid by mathematical prodigies such as Jakob Bernoulli, Abraham de Moivre, Pierre Simon Laplace, and Carl Friedrich Gauss, early 19th century pioneers such as Adolph Quetelet and Francis Galton began developing statistical techniques for uncovering hidden trends in the newly unearthed treasure trove of socioeconomic data [@fienberg1992; @freedman1999]. In the late 19th and early 20th century, these initial efforts were greatly advanced by the theoretical work of figures such as Karl Pearson, Ronald A. Fisher, Jerzy Neyman, and Harold Jeffreys, who established statistics as a discipline in its own right and facilitated its dissemination throughout many scientific fields [@fienberg1992].
 
-As mathematical statistics gained prominence in the early 20th century, data visualization declined. Perceived as less rigorous than "serious" statistical analysis, it got relegated to an auxiliary position, ushering in "dark age" of statistical graphics [@friendly2006; @young2011]. This development may have been partly driven by the early frequentist statisticians' aspiration to establish statistics as a foundation for determining objective truths about the world and society, motivated by personal socio-political goals [see @clayton2021]. Be it as it may, while statistical graphics did get popularized and entered the mainstream during this time, few interesting developments took place [@friendly2021].      
+As mathematical statistics gained prominence in the early 20th century, data visualization declined. Perceived as less rigorous than "serious" statistical analysis, it got relegated to an auxiliary position, ushering in "dark age" of statistical graphics [@friendly2006; @young2011]. This development may have been partly driven by the early frequentist statisticians' aspiration to establish statistics as a foundation for determining objective truths about the world and society, motivated by personal socio-political goals [see @clayton2021]. Be it as it may, while statistical graphics also did get popularized and entered the mainstream during this time, only a few interesting developments took place [@friendly2021].      
 
 However, beginning in the late 1950's, a series of developments took place which would restore the prominence of data visualization, as well as making it more accessible than ever. Firstly, at the theoretical level, the work of Tukey [-@tukey1962; -@tukey1977] and Bertin [-@bertin1967] established data visualization as valuable discipline in its own right. Secondly, at the practical level, the development of personal computers [see e.g. @abbate1999] and high-level programming languages such as FORTRAN in 1954 [@backus1978], made the process of rendering production-grade figures near-effortless in comparison to the earlier hand-drawn techniques. Combined, these developments lead to a surge in the use and dissemination of data visualization.  
 
@@ -34,21 +34,21 @@ However, beginning in the late 1950's, a series of developments took place which
 
 With the boom of static data visualization mid-20th century, interactive data visualization would not be left far behind. The very early interactive data visualization systems tended to be designed for niche, specialized tasks. For example, @fowlkes1969 designed a system which allowed the users to view probability plots under different configurations of parameters and transformations, whereas @kruskal1964 created a tool for visualizing multidimensional scaling. 
 
-However, soon, researchers began exploring interactive data visualization as a general-purpose tool for data exploration. The first such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Subsequent systems strove to provide an even wider range of features. For example, MacSpin [@donoho1988] and XGobi [@swayne1998] implemented features such as interactive scaling, rotation, linked selection (or "brushing"), and interactive plotting of smooth fits in scatterplots, as well as interactive parallel coordinate plots and grand tours (excellent video-documentaries of some of these early interactive data visualization systems are available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
+However, soon, researchers began exploring interactive data visualization as a general-purpose tool for data exploration. The first such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Later systems provided an even wider range of features. For example, MacSpin [@donoho1988], Data Desk [@velleman1989], LISP-Stat [@tierney1990], and XGobi [@swayne1998] implemented features such as interactive scaling, rotation, linked views, and grand tours (excellent video-documentaries of some of these early interactive data visualization systems are available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
 
-Later, with the proliferation of open-source, general-purpose statistical computing software such as S and R, . The successor system to XGobi, GGobi [@swayne2003], expanded on XGobi and made it directly embeddable in the R runtime. Mondrian [@theus2002] allowed for sophisticated linked interaction between many different types of plots including scatteplots, histograms, barplots, scatterplot, mosaic plots, parallel coordinates plots, and maps. Finally, iPlots [@urbanek2003] implemented a general framework for interactive plotting that was not only embedded in R but could be directly programmatically manipulated, and was later further expanded and made performant for big data in iPlots eXtreme [@urbanek2011].      
+Later, with the proliferation of open-source, general-purpose statistical computing software such as S and R, interactive data visualization tools became more widely available. The successor system to XGobi, GGobi [@swayne2003], expanded on XGobi and made it embedable within the R runtime. Mondrian [@theus2002] allowed for sophisticated linked interaction between many different types of plots including scatteplots, histograms, barplots, scatterplot, mosaic plots, parallel coordinates plots, and maps. Finally, iPlots [@urbanek2003] implemented a general framework for interactive plotting that was not only embedded in R but could be directly programmatically manipulated, and was later further expanded and made performant for big data in iPlots eXtreme [@urbanek2011].      
 
-What all of these interactive data visualization systems had in common is that they were designed by statisticians and with interesting, often ambitious interactive features in mind. High-level analytic features such as linked selection/brushing, rotation and projection, and interactive manipulation of model parameters made frequent appearances. While being a clear strength, the more complex nature of the systems may have also slowed their adoption, as they often demanded an expert user to take advantage of most fully.
+What all of these interactive data visualization systems had in common is that they were designed by statisticians for statisticians, with data exploration as the primary goal. High-level analytic features such as linked selection/brushing, rotation and projection, and interactive manipulation of model parameters made frequent appearance. While being a clear strength, the more advanced nature of these systems may have also slowed their adoption, as they demanded more expertise from their users to be used effectively. Finally, these tools often offered fairly limited customizability, and this made them less well suited for data presentation. 
 
 ### Interactive data visualization and the Web: World-wide interactivity
 
-The tail end of the millennium would mark the arrival of a whole new class of technologies that had a significant impact on interactive data visualization, just as it had on almost every other field of human endeavor. The arrival of the internet in the mid 1990's, and the development of JavaScript in 1995 as a high-level programming language for the Web [for a thorough description of the history, see e.g. @wirfs-brock2020], saw the rise of interactive applications that could be accessed by anyone, from anywhere. This was aided by the dissemination of robust and standardized Web browsers. Soon, interactive data visualization became just one of many interactive technologies highly sought after within the fledgling Web ecosystem. 
+The end of the millennium marked the arrival of a new class of technologies which impacted interactive data visualization just as much as almost every other field of human endeavor. The advent of the internet in the mid 1990's made it possible to create interactive applications that could be accessed by anyone, from anywhere. This was aided by the dissemination of robust and standardized Web browsers, as well as development of JavaScript as a high-level programming language for the Web  [for a tour of the history, see @wirfs-brock2020]. Soon, interactive data visualization became just one of many emerging technologies within the fledgling Web ecosystem. 
 
-Early interactive data visualization systems for the Web, such as Prefuse [@heer2005] and Flare [developed around 2008, @flare2020] tended to relied on external plugins (Java and Adobe Flash Player, respectively). However, as browsers got faster at interpreting JavaScript, thanks to advances in compiler technologies, specifically Just In Time (JIT) compilation, it became possible to write entire data visualization libraries in JavaScript. In the late 2000's and early 2010's, several true Web-native interactive data visualization systems emerged. 
+Early interactive data visualization systems for the Web tended to rely on external plugins. Examples of these included Prefuse [@heer2005] and Flare [developed around 2008, @flare2020], which relied on Java runtime and Adobe Flash Player, respectively. However, as browser technologies improved, particularly as JavaScript got significantly more performant thanks to advances in just-in-time (JIT) compilation, it became possible to create complex interactive experiences directly in the browser. As a result, the early 2010's saw the emergence of several popular Web-native interactive data visualization systems. 
 
-Currently, the most prominent framework for data visualization on the Web, interactive or otherwise, is D3.js [@bostock2022]. D3 is a fairly general and low-level JavaScript framework for visualizing data, and consists of a suite of specialized modules designed for various aspects of the data visualization workflow, including parsing data, transformation, defining scales, interfacing with the DOM and handling interaction events, and even physics simulation and animation. Importantly, while D3 does provide methods for handling interactive events, it does not provide a system for dispatching and coordinating these events - it instead delegates this responsibility to the user and encourages the use of reactive Web frameworks such as React [@react2024], Vue [@vue2024], or Svelte [@svelte2024]. Finally, D3.js visualizations are rendered as Scalable Vector Graphics (SVG) by default, meaning that they can be scaled without loss of quality. However, a price to pay for this robustness is in performance, as visualizations can become slow to render at high data volumes. The modular nature of D3 means that the visualizations can be rendered by other, more performant devices, such as the HTML 5 Canvas element or WebGL, however, as of this date, the implementation of such an alternative rendering framework is left to the user and there are no official modules.  
+One of the oldest and most prominent among these Web-native visualization systems is D3.js [@bostock2022]. D3 is a general, low-level framework for visualizing data, and consists of a suite of specialized JavaScript modules designed for various aspects of the data visualization workflow, including data parsing, transformation, scaling, and DOM interaction. Importantly, while D3 does provide methods for handling interactive events, it does not itself provide a system for dispatching and coordinating these events - it instead delegates this responsibility to the user and encourages the use of reactive Web frameworks such as React [@react2024], Vue [@vue2024], or Svelte [@svelte2024]. Finally, D3.js visualizations are rendered as Scalable Vector Graphics (SVG) by default, ensuring lossless scaling but impacting performance at high data volumes. While various unofficial alternative rendering engines, based on the HTML 5 Canvas element or WebGL, do exist, as of this date, no such official libraries exist as of this date.
 
-Building upon the fairly low level framework provided by D3, many packages have been developed to provide a more high-level and opinionated interfaces. Prominent two among these are plotly.js [@plotly2022] and Highcharts [@highcharts2024]. While D3 provides low-level utilities such as data transformations, scales, and geometric objects, these packages provide more high-level utilities such as functions for rendering complete plots and registering reactive events, which are under the hood automatically handled via systems based on the native DOM Event Target interface [@mdn2024a]. Like D3, both plotly.js and Highcharts also render the graphics in SVG by default, however, unlike D3, they both also provide alternative rendering engines based on WebGL [@highschartsboost2022; @plotly2024b]. 
+There are many packages that build upon the fairly low-level framework that D3 provides, providing a more high-level interface. Two prominent among these are plotly.js [@plotly2022] and Highcharts [@highcharts2024]. While D3 provides low-level utilities such as data transformations, scales, and geometric objects, these packages provide more high-level utilities such as functions for rendering complete plots and registering reactive events, which are under the hood automatically handled via systems based on the native DOM Event Target interface [@mdn2024a]. Like D3, both plotly.js and Highcharts also render the graphics in SVG by default, however, unlike D3, they both also provide alternative rendering engines based on WebGL [@highschartsboost2022; @plotly2024b]. 
 
 A somewhat different approach is taken by another popular visualization package built partially on D3 - Vega [@satyanarayan2015; @vega2024a]. Vega provides a declarative framework for defining (interactive) data visualizations using a static [JSON] schema. Compared to plotly.js or Highcharts, Vega is significantly more expressive, allowing for fine-grained customization of graphics and interactive behavior, standing essentially just one level above D3. However, as a consequence, it is also significantly more verbose. For example, a full specification of a scatterplot matrix with linked brushing takes over 300 lines of JSON [not including the data and using default formatting such as would be created with `JSON.stringify(schema, null, "\t")`, @vega2024b].          
 
