--- a/references.bib
+++ b/references.bib
@@ -374,14 +374,49 @@
   doi		= {10.1214/13-STS452}
 }
 
-@Article{	  chen2008,
-  title		= {A brief history of data visualization},
-  author	= {Chen, Chun-houh and H{\"a}rdle, Wolfgang and Unwin, Antony
-		  and Friendly, Michael},
-  journal	= {Handbook of data visualization},
-  pages		= {15--56},
-  year		= {2008},
-  publisher	= {Springer}
+@article{aparicio2015,
+  title={Data visualization},
+  author={Aparicio, Manuela and Costa, Carlos J},
+  journal={Communication design quarterly review},
+  volume={3},
+  number={1},
+  pages={7--11},
+  year={2015},
+  publisher={ACM New York, NY, USA}
+}
+
+@book{chen2008,
+  title={Handbook of data visualization},
+  author={Chen, Chun-houh and H{\"a}rdle, Wolfgang Karl and Unwin, Antony},
+  year={2008},
+  publisher={Springer Science \& Business Media}
+}
+
+@inbook{theus2008,
+  title={High-dimensional Data Visualization},
+  booktitle={Handbook of data visualization},
+  author={Wilhelm, Adalbert},
+  year={2008},
+  pages={152-175},
+  publisher={Springer Science \& Business Media}
+}
+
+@inbook{wilhelm2008,
+  title={Linked views for visual exploration},
+  booktitle={Handbook of data visualization},
+  author={Wilhelm, Adalbert},
+  year={2008},
+  pages={200-214},
+  publisher={Springer Science \& Business Media}
+}
+
+@inbook{wills,
+  title={Linked Data Views},
+  booktitle={Handbook of data visualization},
+  author={Wills, Graham},
+  year={2008},
+  pages={200-214},
+  publisher={Springer Science \& Business Media}
 }
 
 @Article{	  cleveland1984,
@@ -590,6 +625,16 @@
   year		= {1974},
   institution	= {SLAC National Accelerator Lab., Menlo Park, CA (United
 		  States)}
+}
+
+@misc{petricek2020,
+	title = {Designing composable functional libraries},
+	author = {Tomas Petricek},
+	journal = {Lambda Days},
+	year = {2020},
+	month = feb,
+	note = {[Online; accessed 3. Dec. 2024]},
+	url = {https://www.youtube.com/watch?v=G1Dp0NtQHeY}
 }
 
 @Misc{		  flare2020,
@@ -2335,7 +2380,7 @@
 }
 
 @Book{wickham2024,
-	author = {Hadley Wickham, Danielle Navarro},
+	author = {Wickham, Hadley and Navarro, Danielle},
 	title = {ggplot2: Elegant Graphics for Data Analysis (3e)},
 	year = {2024},
 	month = nov,
@@ -2929,4 +2974,110 @@
   author={Clayton, Aubrey},
   year={2021},
   publisher={Columbia University Press}
+}
+
+@article{serrano2021,
+  title={Of javascript AOT compilation performance},
+  author={Serrano, Manuel},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={5},
+  number={ICFP},
+  pages={1--30},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{chi2000,
+  title={A taxonomy of visualization techniques using the data state reference model},
+  author={Chi, Ed Huai-hsin},
+  booktitle={IEEE Symposium on Information Visualization 2000. INFOVIS 2000. Proceedings},
+  pages={69--75},
+  year={2000},
+  organization={IEEE}
+}
+
+@book{kolmogorov2018,
+  title={Foundations of the theory of probability: Second English Edition},
+  author={Kolmogorov, Andrei Nikolaevich and Bharucha-Reid, Albert T},
+  year={2018},
+  publisher={Courier Dover Publications}
+}
+
+@article{tversky1983,
+  title={Extensional versus intuitive reasoning: The conjunction fallacy in probability judgment.},
+  author={Tversky, Amos and Kahneman, Daniel},
+  journal={Psychological review},
+  volume={90},
+  number={4},
+  pages={293},
+  year={1983},
+  publisher={American Psychological Association}
+}
+
+@article{velleman1989,
+  title={A graphical interface for data analysis},
+  author={Velleman, Paul F and Paul, Pratt},
+  journal={Journal of Statistical Computation and Simulation},
+  volume={32},
+  number={4},
+  pages={223--228},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
+
+@book{tierney1990,
+  title={Lisp-stat: an object-oriented environment for statistical computing and dynamic graphics},
+  author={Tierney, Luke},
+  year={1990},
+  publisher={Wiley-Interscience},
+  address={New York}
+}
+
+@misc{rmeta2024,
+	title = {CRAN R Packages by Number of Downloads},
+	author = {{Data Science Meta}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 4. Dec. 2024]},
+	url = {https://www.datasciencemeta.com/rpackages}
+}
+
+@article{tager1979,
+  title={Effect of parental cigarette smoking on the pulmonary function of children},
+  author={Tager, Ira B and Weiss, Scott T and Rosner, Bernard and Speizer, Frank E},
+  journal={American Journal of Epidemiology},
+  volume={110},
+  number={1},
+  pages={15--26},
+  year={1979},
+  publisher={Oxford University Press}
+}
+
+@article{kahn2005,
+  title={An exhalent problem for teaching statistics},
+  author={Kahn, Michael},
+  journal={Journal of Statistics Education},
+  volume={13},
+  number={2},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{roberts2000,
+  title={Multiple Window Visualization on the Web using VRML and the EAI},
+  author={Roberts, Jonathan C and Knight, Rob and Gibbins, Mark and Patel, Nimesh},
+  booktitle={Proceedings of the Seventh UK VR-SIG Conference},
+  pages={149--157},
+  year={2000},
+  organization={SChEME}
+}
+
+@misc{ggplot2repo2024,
+	title = {ggplot2},
+	author = {Wickham, Hadley},
+	journal = {GitHub},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 4. Dec. 2024]},
+	url = {https://github.com/tidyverse/ggplot2}
 }
