--- a/problems.Rmd
+++ b/problems.Rmd
@@ -58,13 +58,13 @@ We can find counterexamples of this practice. For instance, certain visualizatio
 
 So where does this unconscious "law" of showing disjoint parts of the data come from? I believe that it is rooted in the fundamental purpose of data visualization: comparison [@tufte2001; @tukey1993]. When we visualize, we draw our graphics with the ultimate goal of comparing our data along a set of visual channels [@bertin1983; @wilkinson2012; @franconeri2021; @wilke2019]. This mirrors the comparisons we make in the real world, where we compare properties of physical objects. And, as I would like to argue, it is often far easier to reason about multiple objects when they are independent or disjoint. In statistics, we see a example of this in the sum and product rules of probability, which require independence as pre-requisite [@kolmogorov2018]. Likewise, in psychology, is now-all-too-famous experimental evidence that people struggle with comparing non-disjoint events [the "Linda experiment", @tversky1983]. Thus, disjointness presents a more intuitive, "natural" model.
 
-Fundamentally, the intuitive appeal of disjoint parts may originate in the fact that they reflect a structure which mathematicians have long considered natural: a bijection [see e.g. @fong2019; @lawvere2009]. Specifically, if we take a set, split it into disjoint subsets, and then label these subsets, then there is a one-to-one correspondence between the subsets and the labels (i.e. the parts form an [equivalence class](#partition)). This makes it so that we can go back and forth between the subsets and the labels, without losing any information.
+Fundamentally, the intuitive appeal of disjoint parts may originate in the fact that they reflect a structure which mathematicians have long considered natural: a [bijection](#functions) [see e.g. @fong2019; @lawvere2009]. Specifically, if we take a set, split it into disjoint subsets, and label them, then there is a one-to-one correspondence between these subsets and the subset labels (i.e. the parts form an [equivalence class](#partition)). Practically, this means that we can go back and forth between the subsets and the corresponding labels, without losing any information.
 
-An example of this natural correspondence is shown in Figure \@ref(fig:geoms-bijection). Specifically, when drawing a barplot, if we divide our data into disjoint subsets and draw one bar corresponding to each part, then the function mapping the objects (bars) to the data subsets is invertible: we can pick a bar, identify the corresponding subset of cases, and then use this subset to pick out the original bar. In plots where the objects do not represent disjoint subsets of the data, this correspondence is broken: if we identify cases corresponding to a single bar, there is necessarily no simple way to pick out the original bar from the cases alone.
+An diagram of this natural correspondence is shown in Figure \@ref(fig:geoms-bijection). Specifically, when drawing a barplot, if we divide our data into disjoint subsets and draw one bar corresponding to each part, then the function mapping the objects (bars) to the data subsets is invertible: we can pick a bar, identify the corresponding subset of cases, and then use this subset to pick out the original bar. In plots where the objects do not represent disjoint subsets of the data, this correspondence is broken: if we identify cases corresponding to a single bar, there is may be no simple way of picking out the original bar from the cases alone.
 
 ```{r geoms-bijection}
 #| echo: false
-#| fig-cap: "Disjoint subsets provide a one-to-one correspondence (bijection) between geometric objects and the data. Suppose we mark out the cases corresponding to one object (the left most bar, shown in red). Top row: if each geometric object (bar) represents unique subset of cases, we can easily go back and forth between the object and its underlying data (middle panel). Thus, the function of picking the subset corresponding to an object is invertible. Bottom row: if there is an overlap between the cases represented by each object, then there may be no simple way to identify the original object after we have picked out the corresponding cases."
+#| fig-cap: "Disjointness provides a one-to-one correspondence (bijection) between geometric objects and subsets of data. Suppose we mark out the cases corresponding to the leftmost bar (red). Top row: when each geometric object (bar) represents unique subset of cases, we can easily go back and forth between the object and its underlying subset (middle panel). Thus, the function of picking the subset corresponding to each object is invertible. Bottom row: if there is an overlap between the cases represented by each object, then there may be no simple way to identify the original object after we have picked out the corresponding cases."
 
 knitr::include_graphics("./figures/geoms-bijection.png")
 ```
@@ -80,7 +80,7 @@ To illustrate the idea of disjoint parts on concrete, real-world data, take the 
 knitr::include_graphics("./figures/barplot-bijection.png")
 ```
 
-Each bar represents a unique subset of voters and thus the bars show disjoint data. This is the type of data representation that we encounter most often, however, there are few explicit guidelines about this. Hypothetically, we could transform our data, and, for example, take the union of the votes of National and Labour parties:
+Each bar represents a unique subset of voters and thus the bars show disjoint data. This is the type of data representation that we encounter most often, however, there are few explicit guidelines about this. Hypothetically, we could transform our data, and, for example, show the union of the votes of National and Labour parties in the leftmost bar:
 
 ```{r union-geoms}
 #| echo: false
@@ -89,7 +89,7 @@ Each bar represents a unique subset of voters and thus the bars show disjoint da
 knitr::include_graphics("./figures/barplot-notbijection.png")
 ```
 
-However, this way of representing the data has several problems. First, there is the issue of its suitability towards the main goal of the visualization. Specifically, when visualizing election data such as this one, we are typically interested in judging the relative number of votes each party received. The second barplot makes this comparison difficult. Specifically, in the second barplot, since the National bar represents a subset of the National OR Labour bar, we have to perform additional mental calculation if we want to find out how many votes Labour received and compare the absolute counts directly [@cleveland1985]. Second, we have metadata knowledge [see e.g. @wilkinson2012; @velleman1993] about the data being disjoint - we know that, in the New Zealand parliament electoral system, each voter can only cast one vote for a single party. Finally, there is the issue of duplicating information: in the second barplot, the number of votes the National party received is counted twice, once in the leftmost bar and again in the second-left bar. This goes against the general principle of representing our data in the most parsimonious way [@tufte2001].
+However, this way of representing the data has several problems. First, there is the issue of whether this type of representation addresses our visualization goals. For example, when visualizing election data such as the one above, we typically want to compare the relative number of votes each party received. The second barplot in Figure \@ref(fig:union-geoms) this comparison difficult. Specifically, since the leftmost bar represents the union of National and Labour votes, we have to perform additional mental calculation if we want to compare the number of votes received by National and Labour directly [@cleveland1985]. Second, we have metadata knowledge [see e.g. @wilkinson2012; @velleman1993] about the data being disjoint - we know that, in the New Zealand parliament electoral system, each voter can only vote for a single party. Finally, the plot above duplicates information: in Figure \@ref(fig:union-geoms), the number of votes the National party received is counted twice, once in the leftmost bar and again in the second-from-left bar. This goes against the general principle of representing our data in the most parsimonious way [@tufte2001].
 
 Even when our goal is not to compare absolute counts, there are usually better disjoint data visualization techniques available. For example, if we were interested in visualizing the proportion of votes that each party received, we could draw the following plot: 
 
@@ -102,9 +102,9 @@ knitr::include_graphics("./figures/barplot-bijection-proportions.png")
 
 By stacking the bar segments on top of each other, we can easily compare proportion of the total number of votes while retaining a parsimonious representation of our data. Each bar segments now again represents a unique subset of voters.
 
-The example above was fairly clear-cut case of where non-disjoint data representation makes no sense. However, there are also more ambiguous situations. One such situation is when there are multiple attributes of the data which can be simultaneously present or absent for each case. Take, for example, the 2020 New Zealand joint referendum on the legalization of euthanasia and cannabis. In this referendum, the two issues were included on the same ballot and voters would vote on them simultaneously. The legalization of euthanasia was accepted by the voters, with 65.1% of votes supporting the decision, whereas the legalization of cannabis was rejected, with 50.7% of voters rejecting the decision [@referendum2020].
+The example above is fairly clear-cut case of where disjoint data representation is the better choice. However, there are also more ambiguous situations, such as when multiple attributes of the data are simultaneously present or absent for each case. Take, for example, the 2020 New Zealand joint referendum on the legalization of euthanasia and cannabis. In this referendum, the two issues were included on the same ballot and voters would vote on them simultaneously. The legalization of euthanasia was accepted by the voters, with 65.1% of votes supporting the decision, whereas the legalization of cannabis was rejected, with 50.7% of voters rejecting the decision [@referendum2020].
 
-The referendum data can be visualized in the following way:
+We could visualize the referendum data in the following way:
 
 ```{r union-geoms2}
 #| echo: false
@@ -115,7 +115,8 @@ knitr::include_graphics("./figures/referendum-notbijection.png")
 ```
 
 Here, both bars include votes which were cast by the same voter [ignoring the votes where no preference was given for either issue, @referendum2020], making the representation non-disjoint. In 
-this case, the visualization works, since the underlying data is genuinely not disjoint (each person voted twice). If we had information about individual votes, it might be interesting to see how many people voted for both euthanasia and cannabis, how many voted for euthanasia but against cannabis, and so on. Similar types of visualization can work well for set-typed data [see e.g. @alsallakh2014]. 
+this case, the visualization works, since the underlying data is genuinely non-disjoint (each person cast two votes). If we had information about individual votes, it might be interesting to see how many people voted for both euthanasia and cannabis, how many voted for euthanasia but against cannabis, and so on. Similar types of visualization can work well for set-typed data [see e.g. @alsallakh2014]. 
+
 However, even though the data here is fundamentally non-disjoint, there is a way to represent it in a disjoint way that preserves most of the desirable properties - draw separate plots or small multiples [@tufte2001]:  
 
 ```{r}
@@ -126,40 +127,50 @@ However, even though the data here is fundamentally non-disjoint, there is a way
 knitr::include_graphics("./figures/referendum-bijection.png")
 ```
 
+Here again, each bar (segment) in each plot represents a disjoint subset of voters.
+
 #### Disjointness and interaction
 
-As I have argued above, disjoint subsets offer a simpler mental model for understanding data visualizations. When each geometric object represents a unique set of data points, it becomes easier to reason about the comparisons being made. In contrast, when objects overlap or share data points, it requires additional cognitive effort to track the relationships between them.
+As I argued above, disjoint subsets offer a simpler mental model for understanding data visualizations. When each geometric object represents a unique set of data points, it becomes easier to reason about the comparisons being made. In contrast, when objects overlap or share data points, it requires additional cognitive effort to track the relationships between them.
 
-I would also argue that disjointness presents a particularly good model for interactive visualization. The natural correspondence between geometric objects and disjoint subsets of the data makes certain interactions more intuitive, and conversely, overlapping subsets can produce surprising behavior. For instance, when a user clicks on a bar in a linked barplot, they expect to highlight that particular bar and its corresponding cases. If they see parts of other bars within the same plot get highlighted as well, they might have to stop and think about the relationship between the bars and the data, since it is no longer bijective. Similarly, when implementing querying, if our objects do not represent disjoint subsets of the data, we have to think carefully about what querying means: should the user query the objects or the corresponding cases? Disjoint partitions simplify our mental model, and this may be the reason why some authors discuss interactive features in the context of partitions [see e.g. @buja1996; @keim2002].    
+I would also argue that disjointness presents a particularly good model for interactive visualization [see also @wilhelm2008]. The natural correspondence between geometric objects and subsets of the data makes certain interactions more intuitive, and conversely, overlapping subsets can produce surprising or unexpected behavior. For instance, when a user clicks on a bar in a linked barplot, they might reasonably expect to highlight that particular bar within the active plot and the corresponding cases within all the other (passive) plots. If they see parts of other bars within the active plot get highlighted as well, they have to expend additional mental effort thinking about the relationship between the objects (bars) and the subsets of the data, since it is no longer one-to-one.
 
-SQL aggregation queries (`GROUP BY`) are based on partitions [@hellerstein1999].
+Similar issue arises during querying. When a user queries an object that does not represent a disjoint subset of the data, should the returned summary statistics match the object or the (non-disjoint) subset? Again, this issue complicates the interpretation of the presented information.
+
+This does not mean that non-disjoint subsets and linking cannot be useful in specific contexts [see e.g. @alsallakh2014; @wilhelm2008], however, I argue that disjointness provides a good default. Disjoint subsets simplify our mental model, and this may be the reason why some authors discuss interactive features in the context of partitions [see e.g. @buja1996; @keim2002]. Likewise, many common data analytic operations, such as SQL aggregation queries [`GROUP BY`, @hellerstein1999], operate on disjoint subsets, and this may be another reason why this model is more familiar.
 
 ### Plots as partitions
 
-In the two preceding sections, I have argued the plots in our interactive data visualization system should have have two fundamental properties:
+In the two preceding sections, I have argued the plots in our interactive data visualization system should, in general, have have two fundamental properties:
 
 - Plots should show the full data (surjective mapping)
 - Geometric objects within these plots should represent distinct subsets (disjoint parts)
 
-These two properties suggest a fundamental model for plots: that of [partitions](#Partitions). Specifically, I propose the following definition of a *regular plot*:
+These two properties suggest a fundamental model for a plot: that of a [partition](#Partitions). Specifically, I propose the following definition of a *regular plot*:
 
 :::{.definition name="Regular plot"}
-Regular plot is a plot where the geometric objects within one layer represent a partition of the data, such that there is a natural bijection between these objects and (possibly aggregated) parts of the original data.   
+Regular plot is a plot where the geometric objects within one layer represent a partition of the data, such that there is a natural bijection between these objects and (possibly aggregated) subsets of the original data.   
 :::
 
-While, I have not been able to find references explicitly conceptualizing plots as partitions, some data visualization researchers have used the language of bijections when discussing graphics. For example, @dastani2002 discusses plots as bijections (homomorphisms) between data tables and visual attribute tables. Similarly, @ziemkiewicz2009 and @vickers2012 argue that, in order to be visually unambiguous, plots should represent bijections of the underlying data.
+I propose that regular plots should form the fundamental building block of our interactive figures. By arranging a series of regular plots into an interactive figure [as small multiples, @tufte2001], we can ensure that the resulting visualization will be easily interpretable, even when combined with interactive features such as linking and querying.
 
-However, this model skirts around the issue of aggregation. If we assume that the data comes to us pre-aggregated, then modeling plots as a bijection between cases/rows and geometric objects makes perfect sense. However, if we do admit that aggregation is not a completely independent process and is instead a part of the data visualization pipeline [@chi2000; @wickham2016], then we have a problem. 
+#### Bijection on cases vs. bijection on subsets
 
-Aggregation is, by definition, a one-way process - after we have aggregated our data into a set of summaries, we cannot recover the original cases. However, many popular plots such as barplots and histograms rely on aggregation. Under the model proposed by @dastani2002, @ziemkiewicz2009, and @vickers2012, these types of plots would be impermissible. @ziemkiewicz2009 are aware of this and do admit that, at times, aggregation can be an acceptable trade-off, despite the inherent information loss.
+While I have not been able to find references explicitly linking plots to partitions in such a general way, some data visualization researchers have used the language of bijections when discussing graphics. For example, @dastani2002 discusses plots as bijections (homomorphisms) between data tables and visual attribute tables. Similarly, @ziemkiewicz2009 and @vickers2012 argue that, in order to be visually unambiguous, plots should represent bijections of the underlying data.
 
-I propose the following way out of the conundrum. Instead of modeling plots as bijections between *cases* and the geometric objects, I model them as bijections between *parts of data* and the geometric objects. In other words, the domain of the bijection are not individual rows of the original data table, but entire "chunks" of rows. With this approach, aggregation can be considered as part of the bijection, since, if we split our data into ten tables and aggregate each table, we are still left with ten tables of one row each.   
+However, this "one-row-one-object" model skirts around the issue of aggregation. It only works if we assume that the data comes to us pre-aggregated, such that, for example, barplots and histograms are direct representations of their marginal tables. However, if we do admit that aggregation is not a completely independent process and is instead a part of the data visualization pipeline [@chi2000; @wickham2016], then we have a problem. 
+
+Aggregation is, by definition, a one-way process: after we aggregate our data into a set of summaries, we cannot recover the original cases. However, many popular plots such as barplots and histograms rely on aggregation. Under the model proposed by @dastani2002, @ziemkiewicz2009, and @vickers2012, these types of plots would be impermissible. @ziemkiewicz2009 are aware of this and do admit that, at times, aggregation can be an acceptable trade-off, despite the inherent information loss.
+
+I propose the following solution. Instead of modeling plots as bijections between *cases* and the geometric objects, I model them as bijections between *parts of data* and the geometric objects. In other words, the domain of the bijection are not individual rows of the original data table, but entire "slices" of rows. With this approach, aggregation can be considered as part of the bijection. For example, if we split our data into ten tables and aggregate each table, we are still left with ten tables of one row each.   
 
 Finally, Wilkinson [-@wilkinson2012, pp 210] and @keim2002 have linked stacked plots to (hierarchical) partitions.
 
-#### Partitions and products 
+#### Partition products 
 
-In a typical interactive plot, the data will be partitioned across multiple dimensions. To give a concrete example, suppose we want to draw the following barplot:
+Many types of plots involve data partitioned across multiple dimensions. This is especially true in interactive data visualization, where linking automatically induces another level of partitioning [@wilhelm2008]. This necessitates a general mechanism for creating a product of multiple partitions.
+
+To give a concrete example, suppose we want to draw the following barplot:
 
 ```{r}
 #| echo: false
@@ -173,8 +184,7 @@ df2 <- aggregate(value ~ group + selection, data = df, sum)
 knitr::include_graphics("./figures/barplot-partitions-products.png")
 ```
 
-
-We start with the following data, which includes a categorical variable (`group`) that we will plot along the x-axis, a variable representing selection status (`selection`) that we will color the bar segments with, and a continuous variable that we want to summarize (`value`):
+We start with the following data, which includes a categorical variable (`group`, plotted along the x-axis), a variable representing selection status (`selection`, used to colour the bar segments), and a continuous variable that we want to summarize (`value`):
 
 ```{r}
 #| echo: false
@@ -199,19 +209,16 @@ render_tables <- function(x) {
 render_table(df, row.names = TRUE)
 ```
 
-
-
-To draw the individual bar segments, we need to sum the `value` variable across the cases corresponding to each segment. To do this, we first need to split our data into multiple small disjoint subsets according to the product of `group` and `selection` variables:
+To draw the individual bar segments, we need to sum `value` across the subsets cases corresponding to each segment. To do this, we first need to split our data into multiple subsets according to the product of `group` and `selection` variables. In R, the general data structure for representing partitions is the `factor` S3 class, and, while there is no built-in function for combining two factors, we can simulate it using `paste` function to combine factor levels as strings element-wise:
 
 ```{r}
 #| results: "asis"
-# Using paste0() here to simulate a product of two factors
-product_factor <- paste0(df$group, df$selection)
+product_factor <- paste(df$group, df$selection)
 split_dfs <- split(df, product_factor)
 render_tables(split_dfs)
 ```
 
-We could then summarize each small data set by summing `value`:
+We can then summarize each small data set by summing `value`:
 
 ```{r}
 #| results: "asis"
@@ -222,7 +229,7 @@ summarized_dfs <- lapply(split_dfs, function(x) {
 render_tables(summarized_dfs)
 ```
 
-Finally, to "stack" the segments on top of each other, we need to combine the summaries back together, according to the levels of `group` variable, and take the cumulative sum:
+Finally, to "stack" the segments on top of each other, we need to combine the summaries back together, within the levels of `group` variable, and take their cumulative sum:
 
 ```{r}
 #| results: "asis"
@@ -237,13 +244,13 @@ stacked_dfs <- lapply(grouped_dfs, function(x) {
 render_tables(stacked_dfs)
 ```
 
-Now, we can combine the tables into one data set and render:
+Now, we can combine these tables into one `data.frame` and render:
 
 ```{r}
 #| eval: false
 combined_df <- do.call(rbind, stacked_dfs)
 combined_df$selection <- factor(combined_df$selection, levels = c(2, 1))
-# Need to reverse data order for ggplot2 to layer segments appropriately
+# Need to reverse row order for ggplot2 to layer segments in the correct order
 combined_df <- combined_df[6:1, ] 
 
 ggplot(combined_df, aes(x = group, y = value, fill = selection)) +
@@ -257,8 +264,7 @@ ggplot(combined_df, aes(x = group, y = value, fill = selection)) +
 knitr::include_graphics("./figures/barplot-partitions-products.png")
 ```
 
-
-Now, we have shown how we can compute summary statistics for a stacked barplot using a simple split-apply-combine pipeline [@wickham2011]. This is in fact what happens implicitly in most `ggplot2` plots:
+What we have just shown is an example of a simple split-apply-combine pipeline [@wickham2011]. This type of a pipeline is required for most types of plots, and happens implicitly in most `ggplot2` calls such as this one:
 
 ```{r}
 #| eval: false
@@ -266,7 +272,7 @@ ggplot(data, aes(x, y, fill = fill)) +
   geom_bar()
 ```
 
-In the call above, we partition the data set by the Cartesian product of the `x`, `y`, and `fill` variables. That is, we break the data into parts based on the unique combinations of these variables, and then compute whatever statistical transformation we need. See the following comment from the [`ggplot2` documentation](https://github.com/tidyverse/ggplot2/blob/f46805349d6ca8ca7a99f8966cfa0f29279c2f6c/R/grouping.R#L7) [@wickham2016]:
+To be more explicit, in the `ggplot2` call above, we specify that we want to partition the data set by the Cartesian product of the `x`, `y`, and `fill` variables. We then compute whatever statistical aggregations we need on the resulting subsets. See the following comment from the [`ggplot2` documentation](https://github.com/tidyverse/ggplot2/blob/f46805349d6ca8ca7a99f8966cfa0f29279c2f6c/R/grouping.R#L7) [@wickham2016]:
 
 ```{r}
 # If the `group` variable is not present, then a new group
@@ -276,11 +282,11 @@ In the call above, we partition the data set by the Cartesian product of the `x`
 
 #### Limits of simple product partitions
 
-For many types of plots, the simple strategy of taking products of factors to form a single "flat" partition of the data works reasonably well. However, for other types of plots, this flat model is not enough. 
+For many types of plots, the simple strategy of taking a single "flat" product of all factors/partitions works reasonably well. However, for other types of plots, this simple model is not enough. 
 
-To give a concrete example, let's turn back to the barplot from the section \@ref(plots-as-partitions). To draw the barplot, we first split our data into smaller tables, summarized each table by summing up the values, stacked the summaries by taking their cumulative sum, and finally used these to draw the bar segments. This gave us a good visualization for comparing absolute counts across the categories. However, what if we wanted to compare proportions?
+To give a concrete example, let's turn back to the barplot from the section above (\@ref(plots-as-partitions)). To draw the barplot, we first split our data into smaller tables, summarized each table by summing up the values, stacked the summaries by taking their cumulative sum, and finally used the resulting data frame to render bar segments. This gave us a stacked barplot, which is a good visualization for comparing absolute counts across categories. 
 
-It turns out there is another type of visualization, called spineplot, which can be used to represent the same underlying as a barplot, however, is much more useful for comparing proportions:  
+However, what if, instead of comparing absolute counts, we wanted to compare proportions? It turns out there is another type of visualization, called the spineplot, which can be used to represent the same underlying data as the barplot, however, is much more useful for comparing proportions: 
 
 ```{r barplot-spineplot}
 #| echo: false
@@ -289,21 +295,28 @@ It turns out there is another type of visualization, called spineplot, which can
 knitr::include_graphics("./figures/barplot-spineplot.png")
 ```
 
-A spineplot represents the same underlying statistic as a barplot (usually sums of counts). However, unlike in barplot, where the underlying statistic gets mapped to the y-axis position/bar height, in spineplot, the underlying summary statistic gets mapped to two aesthetics: the y-axis position and the bar width. Further, the y-axis position gets normalized, such that the heights of the different segments add up to one. The result is a visualization that makes it easy to compare relative proportions across the categories.
+Like barplots, spineplots represent some summary statistic (usually counts), aggregated within the levels of the product of two categorical variables. However, unlike barplots, spineplots map the underlying statistics to both the y-axis position and width. Furthermore, the y-axis position is normalized, such that the heights of the different segments within the same category add up to one. This normalization makes it possible to compare the relative frequencies within categories directly (notice how the right panel in Figure \@ref(fig:barplot-spineplot) makes it obvious that the proportion of red cases within the B and C categories is the same). Thus, like barplot, the spineplot is a valuable tool for visualizing categorical data, especially when we can use interactive features to switch from one type of representation to the other. 
 
-The fact that the spineplot makes it easy to see relative proportions makes it a very useful visualization. Notice how, in Figure \@ref(fig:barplot-spineplot), the spineplot makes it much easier to see that the proportions of the red cases are same across the B and C groups. Thus, spineplot is a definitely desirable type of representation for categorical data, especially if we can use interactiveity easily switch between it and the barplot.
-
-However, despite the fact that barplot and spineplot are closely related visualizations, turning one into the other is not always a trivial exercise. Specifically, many declarative data visualization systems lack simple syntax for creating spineplots. For example, in `ggplot2`, there is currently no simple declarative way to define a spineplot. To create the right panel in Figure \@ref(fig:barplot-spineplot), the data had to first be wrangled into the right shape outside of the `ggplot2` call, and the entire process took over 10 lines of code (using standard `dplyr` syntax).
-
-Why are spineplots tricky? The reason is that they force us to confront the hierarchical nature of graphics. Specifically, in a spineplot, the x- and y-axes represent the same data, however, this data is summarized and transformed along different levels of aggregation:
-
-- Along the x-axis, we stack the summaries *across the levels of a single factor*
-- Along the y-axis, we stack the summaries *across the levels of a product of two factors* and normalize them by the values *within the levels of the parent factor*.   
-
-So, in a spineplot, it is not enough to simply break our data into $j \cdot k$ tables; instead, we need to break it into $j$ tables on one level, $j \cdot k$ tables on another level, and preserve this hierarchical relationship in some way, such that 
+However, despite the fact that barplot and spineplot represent the same underlying data, turning one into the other is not always trivial. Specifically, while many grammar-based visualization systems offer a simple declarative syntax for defining barplots, they lack such simple syntax for spineplots. For example, in `ggplot2`, there is currently no way to define a spineplot without first having to reshape the data, and creating the plot right panel in Figure \@ref(fig:barplot-spineplot) took over 10 lines of external code (using standard `dplyr` syntax).
 
 #### Partitions and hierarchy
 
+Why are spineplots so tricky? The reason is that they force us to confront the hierarchical nature of graphics. Specifically, while in a barplot, we can get away with a single flat partition of the data, in a spineplot, the data is summarized and transformed *along and across* different levels of aggregation:
+
+- Along the x-axis, we stack the summaries *across the levels of the top-level factor/category*
+- Along the y-axis, we stack the summaries *across the levels of a product of two factors* and normalize them by the values *within the levels of the top-level factor*.   
+
+So, when we want to render a spineplot based on two categorical variables with $j$ and $k$ levels, it is not enough to simply break our data into $j \cdot k$ tables. Instead, we need to partition our data in two steps: first, break the original data into $j$ tables based on the levels of the top level factor, and second we break the resulting sub-tables into $j \cdot k$ tables, based on the levels of the second factor. This automatically induces a hierarchical relationship between the tables, such that the tables form a tree-like structure, see Figure \@ref(fig:spineplot-tree):
+
+```{r spineplot-tree}
+#| echo: false
+#| fig-cap: "A diagram of relationship between the subsets of the data represented within a spineplot/barplot. The whole data set is partitioned into bars, which are in turn partitioned into bar segments. The arrows represent a union relationship, such that a bar is a union of its corresponding segments, and whole the data set is a union of all bars."
+knitr::include_graphics("./figures/spineplot-tree.png")
+```
+
+In the diagram above, each vertical level represents on partition of the data, and the relationship between parts is designated by arrows, such that a node where multiple arrows meet represents a union of the corresponding subsets. 
+
+The same tree can be used to represent a barplot; however, here it is not strictly necessary, if we skirt around some issues such as ensuring the correct row order when stacking. However, for a spineplot, this kind of structure is absolutely necessary, since we need to transform data *across* the levels of the hierarchy. Specifically, we need to normalize the statistics within the subsets corresponding to each bar segment by the values within the  
 
 
 @keim2002 stacked plots are suited for hierarchically-partitioned data. 
